Fix new player modal on mobile

--- a/src/components/AddPlayer.css
+++ b/src/components/AddPlayer.css
@@ -5,7 +5,8 @@
     transform: translate(-50%, -50%);
     max-width: 90vw;
     max-height: 90vh;
-    width: 400px
+    width: 400px;
+    z-index: 20;
 }
 
 .add-player-modal form {
@@ -57,4 +58,5 @@
     width: 100vw;
     height: 100vh;
     background: rgba(255, 255, 255, 0.2);
+    z-index: 15;
 }
